2015-11-07 Philipp Klaus Krause <pkk AT spth.de>

	* support/util/dbuf_string.h,
	  support/util/dbuf_string.c,
	  src/SDCCval.c,
	  src/SDCC.lex:
	  Handling of UTF-16 and UTF-16 string literals in the frontend up to strVal().

2015-11-06 Philipp Klaus Krause <pkk AT spth.de>

	* support/util/dbuf.h,
	  support/util/dbuf.c,
	  support/util/dbuf_string.h,
	  support/util/dbuf_string.c:
	  Allow prepending to dynamic buffers.
	* src/SDCC.lex,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Support C11 u8 prefix for UTF-8-encoded unicode string literals.
	* src/SDCCutil.c,
	  support/regression/tests/string.c:
	  Fix handling of universal escape sequences in UTF-8-encoded strig literals.
	* support/regression/tests/iso-8859-1.c:
	  Test support for source encodings other than unicode.

2015-11-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCC.y: only emit W_FLEXARRAY_INSTRUCT for c89
	* src/SDCCpeeph.c (labelJTInRange): removed env SDCC_SJMP_JUMPTABLE check,
	  closes patch #29,
	  (readRules): clean up

2015-11-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Print calling convention for functions.
	* src/z80/peep.c:
	  More accurate handling of register arguments in peepholes.

2015-11-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (packRegsForOneuse): fixed bug 2373
	* support/regression/tests/bug-2373.c: new, added

2015-11-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln,
	* src/yacc.vcxproj: deleted yacc project
	* src/sdcc.vcxproj,
	* src/sdcc.vcxproj.filters: moved SDCC.y here for better dependencies
	* SDCC.props: new, added Visual C property sheet for generic settings like
	  boost path (default: c:\local\boost_1_59_0\)
	* src/hc08/hc08.vcxproj,
	* src/sdcc.vcxproj,
	* src/stm8/stm8.vcxproj,
	* src/z80/z80.vcxproj: use SDCC.props
	* sdas/linksrc/lkaomf51.c: output capitals depending on the zflag
	* src/common.h
	* src/stm8/ralloc2.cc (extra_ic_generated),